adjust vagrant config for wordpress

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,14 @@
 .vagrant
 .mysql-passes
 
+#     IDEs           #
+######################
+.buildpath
+.project
+.settings
+.build
+.idea
+
 # OS generated files #
 ######################
 .DS_Store
